26. Use QDesktopWidget::logicalDpiX()/96.0 to set DPI scale factor.
27. Expand ~/ QDir::homePath() when read from UI.
28. Save QDir::homePath()/ as ~ in config file, and convert when read.
29. Allow all bar title and artist columns to be hidden in playqueue.
30. Add option to disable song info tooltips.
31. Only show icons in message widget buttons if style uses icons for dialog
    buttons.

1.4.2
-----
 1. When guessing song details from filename (due to missing tags), remove any
    extension - not just three letter extensions!
 2. In tag editor, only show '(Various)' hint for the 'All tracks' entry.
 3. Also capitalise composer in tag editor.
 4. Resize device properties dialog when changing transcoder.
 5. Initialise sidebar icon sizes before constructing.
 6. Display multiple genres as separate entries in playlists page genre combo.
 7. Resize cover in grouped view if it is too wide.
 8. In context view, when creating links to similar artists compare artists
    names case-insensitively.
 9. Fix downloading of podcasts when url is redirected.
10. If 'force single click' is disabled, then double-click on icon view will
    not add artist/album to playqueue but navigate into.
11. When using Cache config page to clear disk cover/scaled-cover cache, also
    clear memory cache.
12. Allow to change stream, and online-service, filter search category without
    closing current search field.

1.4.1
-----
 1. Remove unused var warning when compiling without online services.
 2. Remove some moc/QObject warnings in KDE builds without streams or http
    server.
 3. Update current song to scrobble, even if disabled, so that when enabled we
    can scrobble.
 4. Seems like MPDSribble itself is broken with regards to sending "love"
    status, so remove MPDScribble from list of scrobblers.
 5. Last.fm replies are XML, so decode these properly!
 6. Don't log scrobbler session key to debug file.
 7. Remove extra margin in podcast settings dialog.